--- a/package.json
+++ b/package.json
@@ -17,11 +17,13 @@
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
 		"react-scripts": "^5.0.1",
+		"sass": "^1.62.1",
 		"typescript": "^5.0.4"
 	},
 	"devDependencies": {
 		"@babel/preset-env": "^7.21.5",
-		"@types/react": "^18.2.6"
+		"@types/react": "^18.2.6",
+		"@types/react-dom": "^18.2.4"
 	},
 	"browserslist": {
 		"production": [
