--- a/package.json
+++ b/package.json
@@ -13,11 +13,15 @@
 	"dependencies": {
 		"@babel/cli": "^7.21.5",
 		"@babel/core": "^7.21.8",
+		"@react-three/drei": "^9.68.3",
+		"@react-three/fiber": "^8.13.0",
+		"@types/three": "^0.152.0",
 		"mathjs": "^11.8.0",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
 		"react-scripts": "^5.0.1",
 		"sass": "^1.62.1",
+		"three": "^0.152.2",
 		"typescript": "^5.0.4"
 	},
 	"devDependencies": {
