it's kinda working let's go

--- a/package.json
+++ b/package.json
@@ -13,12 +13,17 @@
 	"dependencies": {
 		"@babel/cli": "^7.21.5",
 		"@babel/core": "^7.21.8",
+		"@cortex-js/compute-engine": "^0.12.2",
 		"@react-three/drei": "^9.68.3",
 		"@react-three/fiber": "^8.13.0",
+		"@types/evaluatex": "^2.2.4",
 		"@types/three": "^0.152.0",
+		"evaluatex": "file:evaluatex-v2.2.4.tgz",
 		"mathjs": "^11.8.0",
+		"mathquill": "^0.10.1-a",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
+		"react-mathquill": "^1.0.3",
 		"react-scripts": "^5.0.1",
 		"sass": "^1.62.1",
 		"three": "^0.152.2",
